--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=e25fbef6f8ccf0e761a4bb714b613a02
+APP_SECRET=1b546ec257cb2b6ca847193d669a59cc
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -26,7 +26,7 @@ APP_SECRET=e25fbef6f8ccf0e761a4bb714b613a02
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://root:password@127.0.0.1:3306/docu?serverVersion=16&charset=utf8"
+DATABASE_URL="mysql://root:password@127.0.0.1:3306/db_name?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
