--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
           "name": "Khalilleo Webagentur",
-          "email": "info@khalilleo.com"
+          "email": "dev@khalilleo.com"
         }
       ],
     "minimum-stability": "stable",
